tests/lean/unify_tac1.lean.expected.out
unify_tac1.lean:12:3: error: is_def_eq failed
state:
A : Type,
a : A,
p : A → Prop,
H : p a
⊢ p ?m_1
